cmake_minimum_required(VERSION 3.24)
project(homework27_4_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(homework27_4_2 src/main.cpp src/Figure.cpp include/Figure.h src/Circle.cpp include/Circle.h src/Square.cpp include/Square.h src/EquilateralTriangle.cpp include/EquilateralTriangle.h src/Rectangle.cpp include/Rectangle.h)
